--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 
 <body>
+<!--Напишите функцию DeepComp для глубокого сравнения переданных ей значений.
+Значения могут быть числами, строками, хэшами, массивами, в т.ч. любого уровня вложения.-->
 <h3>Смотри консоль</h3>
 <input type=button value='авто-тесты' onclick='DeepComp_Tests()'>
 
